--- a/AutoOwners/AutoOwnersRemoveDriver.html
+++ b/AutoOwners/AutoOwnersRemoveDriver.html
@@ -181,12 +181,22 @@
             }
         });
 
-        // 4. Datepicker
-        new Pikaday({
-          field: document.getElementById("00NU7000005zuLl"),
-          format: "MM/DD/YYYY"
-        });
-
+        
+       // 4. Datepicker
+new Pikaday({
+    field: document.getElementById("00NU7000005zuLl"),
+    format: "MM/DD/YYYY",
+    toString(date) {
+      const day = String(date.getDate()).padStart(2, "0");
+      const month = String(date.getMonth() + 1).padStart(2, "0");
+      const year = date.getFullYear();
+      return `${month}/${day}/${year}`;
+    },
+    parse(dateString) {
+      const [month, day, year] = dateString.split("/");
+      return new Date(year, month - 1, day);
+    },
+  });
         // 5. Validation & Review
         const fieldData = [
           { id: "email", label: "Email", type: "email" },
