--- a/Safeco/SafecoIDCard.html
+++ b/Safeco/SafecoIDCard.html
@@ -20,7 +20,7 @@
   <body class="bg-gray-100 flex items-center justify-center min-h-screen p-6">
     <form
       id="mainForm"
-      action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DVD000007JpKX"
+      action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00Dcb000009T0mR"
       method="POST"
       class="bg-white p-8 rounded-2xl shadow-md w-full max-w-xl space-y-8 relative"
       autocomplete="off"
@@ -71,7 +71,7 @@
         </div>
       </div>
       <!-- Hidden Salesforce fields -->
-      <input type="hidden" name="oid" value="00DVD000007JpKX" />
+      <input type="hidden" name="oid" value="00Dcb000009T0mR" />
       <input
         type="hidden"
         name="retURL"
@@ -236,3 +236,4 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
   </body>
 </html>
+
