--- a/AutoOwners/AutoOwnersRemoveDriver.html
+++ b/AutoOwners/AutoOwnersRemoveDriver.html
@@ -124,6 +124,7 @@
       <input type="hidden" id="formDataJson" name="Form_Captured_Data__c" value="" />
       <input type="hidden" id="formMissingData" name="Form_Missing_Data__c" value="" />
       <input type="hidden" name="Carrier__c" value="Auto Owners" />
+      <input type="hidden" name="delete_Action_Form__c" value="1" />
 
       <div class="flex justify-end mt-6">
         <button type="button" id="reviewBtn" class="bg-blue-600 text-white font-semibold py-2 px-8 rounded-xl hover:bg-blue-700 transition">Review and Submit</button>
