--- a/AutoOwners/AutoOwnersAddVehicle.html
+++ b/AutoOwners/AutoOwnersAddVehicle.html
@@ -20,6 +20,7 @@
       autocomplete="off"
       novalidate
     >
+
       <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">
         Add Vehicle Auto Owners Form
       </h2>
@@ -176,7 +177,6 @@
               Full Glass<span class="star">*</span>
             </label>
             <select id="00NU7000007qN69" name="Full_Glass__c" title="Full Glass" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
-              <option value="">--None--</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
@@ -187,7 +187,6 @@
               Customizations and Electronics<span class="star">*</span>
             </label>
             <select id="00NU7000007qNFp" name="Customizations_and_Electronics__c" title="Customizations and Electronics" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
-              <option value="">--None--</option>
               <option value="Included Limit">Included Limit</option>
               <option value="Custom Limit">Custom Limit</option>
             </select>
@@ -215,7 +214,6 @@
               Road Trouble Service<span class="star">*</span>
             </label>
             <select id="00NU7000007qNSj" name="Road_Trouble_Service__c" title="Road Trouble Service" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
-              <option value="">--None--</option>
               <option value="No Coverage">No Coverage</option>
               <option value="All Reasonable Costs">All Reasonable Costs</option>
             </select>
@@ -226,7 +224,6 @@
               Additional Expense<span class="star">*</span>
             </label>
             <select id="00NU7000007qNcP" name="Additional_Expense__c" title="Additional Expense" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
-              <option value="">--None--</option>
               <option value="No Coverage">No Coverage</option>
               <option value="30 / 900">30 / 900</option>
               <option value="40 / 1,200">40 / 1,200</option>
@@ -242,7 +239,6 @@
               Loan / Lease Gap<span class="star">*</span>
             </label>
             <select id="00NU7000007qNkT" name="Loan_Lease_Gap__c" title="Loan / Lease Gap" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
-              <option value="">--None--</option>
               <option value="No Coverage">No Coverage</option>
               <option value="Loan Gap">Loan Gap</option>
               <option value="Lease Gap">Lease Gap</option>
@@ -254,7 +250,6 @@
               Original Titleholder of Vehicle<span class="star">*</span>
             </label>
             <select id="00NU7000007qNu9" name="Original_Titleholder_of_Vehicle__c" title="Original Titleholder of Vehicle" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
-              <option value="">--None--</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
@@ -264,8 +259,7 @@
             <label for="00NU7000007qNyz" class="block text-sm font-medium text-gray-700">
               Limited Transport/Network Comp Driver<span class="star">*</span>
             </label>
-            <select id="00NU7000007qNyz" name="Limited_Transport_Network_Comp_Driver__c" title="Limited Transport/Network Comp Driver" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
-              <option value="">--None--</option>
+            <select id="00NU7000007qNyz" name="Limited_Transportation_Network_Company__c" title="Limited Transport/Network Comp Driver" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
@@ -276,7 +270,6 @@
               Original Equipment Manufacturer Parts<span class="star">*</span>
             </label>
             <select id="00NU7000007qO2D" name="Original_Equipment_Manufacturer_Parts__c" title="Original Equipment Manufacturer Parts" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
-              <option value="">--None--</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
@@ -498,7 +491,7 @@
           <label for="00NU7000006N0iD" class="block text-sm font-medium text-gray-700">
             Vehicle Use<span class="star">*</span>
           </label>
-          <select id="00NU7000006N0iD" name="Vehicle_Use12__c" title="Vehicle Use" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
+          <select id="00NU7000006N0iD" name="Vehicle_Use__c" title="Vehicle Use" class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm">
             <option value=""></option>
             <option value="Pleasure (includes commute 0-3 mi)">Pleasure (includes commute 0-3 mi)</option>
             <option value="Commute to Work/School (4-14 mi)">Commute to Work/School (4-14 mi)</option>
@@ -786,14 +779,35 @@ document.addEventListener("DOMContentLoaded", function () {
     const captured = [];
     const missing = [];
 
+
+    const optionalFields = ["00NU7000007rAur", "00NU7000007QpUH", "00NU7000007qTpt"];
+
     fieldData.forEach(field => {
-      const el = document.getElementById(field.id);
-      if (el && el.value && el.value.trim()) {
-        captured.push(`${field.label} = ${el.value.trim()}`);
-      } else if (el) {
-        missing.push(field.label);
-      }
-    });
+  const el = document.getElementById(field.id);
+  if (!el) return;
+
+   if (optionalFields.includes(field.id) && !el.value.trim()) {
+      return;
+    }
+    
+  
+  // 🚫 Skip fields inside hidden Lien/Lease section
+  if (lienLeaseSection.classList.contains("hidden") &&
+      lienLeaseSection.contains(el)) {
+    return;
+  }
+
+   if (customLimitWrapper.classList.contains("hidden") &&
+        customLimitWrapper.contains(el)) {
+      return;
+    }
+  
+  if (el.value && el.value.trim()) {
+    captured.push(`${field.label} = ${el.value.trim()}`);
+  } else {
+    missing.push(field.label);
+  }
+});
 
     let capturedField = document.getElementById("Form_Captured_Data__c");
     let missingField = document.getElementById("Form_Missing_Data__c");
@@ -821,6 +835,9 @@ document.addEventListener("DOMContentLoaded", function () {
   function validateFields() {
     const missing = [];
 
+  if (customizationsSelect.value !== "Custom Limit") {
+    customLimitInput.value = "";
+  }
     // Validate always required fields
     requiredFields.forEach((field) => {
       if (field.radioGroupName) {
@@ -853,15 +870,19 @@ document.addEventListener("DOMContentLoaded", function () {
     }
 
     // CONDITIONAL: Lien/Lease fields (only required when Loan Gap or Lease Gap selected)
-    const showLienLease = loanLeaseGapSelect.value === "Loan Gap" || loanLeaseGapSelect.value === "Lease Gap";
-    if (showLienLease) {
-      conditionalLienLeaseFields.forEach((field) => {
-        const el = document.getElementById(field.id);
-        if (el && !el.value.trim()) {
-          missing.push(field.label);
-        }
-      });
+  const showLienLease =
+  (loanLeaseGapSelect.value === "Loan Gap" ||
+   loanLeaseGapSelect.value === "Lease Gap") &&
+  !lienLeaseSection.classList.contains("hidden");
+
+if (showLienLease) {
+  conditionalLienLeaseFields.forEach((field) => {
+    const el = document.getElementById(field.id);
+    if (el && !el.value.trim()) {
+      missing.push(field.label);
     }
+  });
+}
 
     return missing;
   }
@@ -903,6 +924,5 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 </script>
-  </body>
-
+</body>
 </html>
